--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^20.3.7",
     "@angular/platform-browser-dynamic": "^20.3.7",
     "@angular/router": "^20.3.7",
+    "@awesome-cordova-plugins/screen-orientation": "^8.1.0",
     "@capacitor/android": "7.4.3",
     "@capacitor/app": "7.1.0",
     "@capacitor/camera": "^7.0.2",
